@@ -9,4 +9,10 @@ Gets the declared tag number of a field
 The method is implemented for the \linkS4class{FieldDescriptor} class
 }
 \keyword{methods}
-
+\examples{
+proto.file <- system.file( "proto", "addressbook.proto", package = "RProtoBuf" )
+Person <- P( "tutorial.Person", file = proto.file )
+number(Person$id)
+number(Person$email)
+as.character(Person)
+}
